# natura-ratio

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_main.py
.forgejo/workflows/: scan_vulnerabilities.yml
