[project]
name = "natura-ratio"
version = "0.1.0"
description = "Calculate the ratio of Natura2000 area to municipality area"
readme = "README.md"
authors = [{ name = "Jēkabs Balodis", email = "signalingpigeon@duck.com" }]
requires-python = ">=3.14"
dependencies = [
  "geopandas>=1.1.3",
  "httpx>=0.28.1",
  "py7zr>=1.1.0",
  "pyarrow>=23.0.1",
  "pydeck>=0.9.1",
  "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-coverage>=0.0",
  "ruff>=0.15.7",
  "tombi>=0.9.9",
  "ty>=0.0.24",
]

[tool.coverage.run]
omit = ["tests/*"]
source = [
  ".",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "D",  # pydocstyle
  "DOC",  # pydoclint
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8 naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "PL",  # pylint
]
ignore = ["PLR2004", "F821"]

[tool.ruff.lint.per-file-ignores]
'test_main.py' = ["D", "DOC"]

[tool.tombi.files]
exclude = [".venv/**"]

[tool.ty.environment]
python-platform = "win32"
python-version = "3.14"

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
